syntax = "proto3";

service LogService {
    rpc SendLinuxLog (LinuxLogRequest) returns (StatusResponse);
    rpc SendWindowsLog (WindowsLogRequest) returns (StatusResponse);
}

service PacketService {
    rpc SendPacket (PacketRequest) returns (StatusResponse);
}

message LinuxLogRequest {
    string device_id = 1;
    string source_ip = 2;
    string timestamp = 3;
    string process_name = 4;
}

message WindowsLogRequest {
    string device_id = 1;
    string source_ip = 2;
    string timestamp = 3;
    string action = 4;
    int32 src_port = 5;
    int32 dst_port = 6;
}

message PacketRequest {
    string device_id = 1;
    string source_ip = 2;
    string destination_ip = 3;
    int32 source_port = 4;
    int32 destination_port = 5;
    int32 size = 6;
    string timestamp = 7;
    PacketType type = 8;
    int32 process_id = 9;
    string process_name = 10;
    string executable_path = 11;
    string file_hash = 12;
}

message StatusResponse {
    string status = 1;
}

enum PacketType {
    TCP = 0;
    UDP = 1;
}